@@ -182,9 +182,7 @@ init_HttpProxyServer(int n_accept_threads)
 {
   HttpProxyPort::Group& proxy_ports = HttpProxyPort::global();
 
-#ifndef INK_NO_REVERSE
   init_reverse_proxy();
-#endif
   httpSessionManager.init();
   http_pages_init();
   ink_mutex_init(&debug_sm_list_mutex, "HttpSM Debug List");
